--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,15 +3,42 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Radio App</title>
+    <title>RadioTest</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="index.css" /> -->
-    <script src="index.js"></script>
   </head>
   <body>
-    <h1>Very cool radio</h1>
+    <h1>RadioTest</h1>
     <div class="box">
-      <audio id="audio" src="/stream" preload="none" controls autoplay></audio>
+      <audio
+        id="audio"
+        src="/stream"
+        loop="true"
+        preload="none"
+        controls
+        autoplay
+      ></audio>
+      <script type="text/javascript">
+        const aud = document.getElementById('audio');
+        aud.onended = function () {
+          alert('Звук закончился');
+        };
+      </script>
+    </div>
+    <div class="box2">
+      <audio
+        id="audio2"
+        src="/track"
+        loop="true"
+        preload="none"
+        controls
+        autoplay
+      ></audio>
+      <script type="text/javascript">
+        const aud2 = document.getElementById('audio2');
+        aud2.onended = function () {
+          alert('Звук закончился');
+        };
+      </script>
     </div>
   </body>
 </html>
